# python-intermediate-inflammation

./: README.md  geom.py  inflammation-analysis.py  notes_intermediate_python.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: compute_data.py  models.py
tests/: test_analyze_data.py  test_models.py
