[tool.poetry]
name = "python-intermediate-inflammation"
version = "1.0.0"
description = ""
authors = ["jakobVer <jakob.versnjak@gmail.com>"]
readme = "README.md"
license "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
