[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = ""
authors = ["jakobVer <jakob.versnjak@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
